# ccalc

./: .clang-format  .cmake-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  README.md  calc.l  calc.yy  common.hpp  driver.cpp  driver.hpp  exceptions.hpp  main.cpp  makefile  scanner.hpp
src/: CMakeLists.txt  calc.l  calc.yy  driver.cpp  driver.hpp  exceptions.hpp  main.cpp
test/: CMakeLists.txt  basic_functions.cpp  basic_operations.cpp  main.cpp  test_helper.cpp  test_helper.hpp  trigonometric_functions.cpp
